Enhance about section styles and remove hover effect from menu button in navbar. Updated font size and alignment for profile text, added background height for about section, and commented out hover event listeners.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1622,6 +1622,10 @@ span::after {
     .about-content {
         padding: 0 2rem;
     }
+
+    .about-bg{
+        height: 20%;
+    }
     
     .about-left {
         padding: 3rem 2rem;
@@ -1652,7 +1656,8 @@ span::after {
     }
     
     .about-profile p {
-        font-size: 0.9rem;
+        font-size: 1.1rem;
+        text-align: start;
     }
     
     /* Skills mobile responsive */
