Add styles for projects gallery and project images in styles.css
Introduced padding and margin adjustments for the projects gallery, and set height and object-fit properties for project images to enhance layout and visual consistency.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1690,6 +1690,18 @@ span::after {
     .skills-vertical-line {
         display: none;
     }
+
+    .projects-gallery {
+        padding: 0 20px;
+        margin-bottom: 0;
+    }
+    .project-image {
+        height: 250px;
+        object-fit: cover;
+        object-position: center;
+    }
+
+    
 }
 
 /* Animación del botón hamburguesa cuando está activo */
