--- a/css/styles.css
+++ b/css/styles.css
@@ -1372,6 +1372,37 @@ span::after {
 
 
 /* Responsive para proyectos */
+@media (max-width: 1539px) {
+    .menu-nav{
+        margin-top: -3rem;
+    }
+    .menu-nav a{
+    font-size: 2rem;   
+ }
+}
+
+/* Responsive para proyectos */
+@media (max-width: 1024px) {
+    .projects-gallery {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1.5rem;
+        max-width: 800px;
+    }
+    
+    .project-image {
+        height: 250px;
+    }
+    
+    .project-info h3 {
+        font-size: 1.3rem;
+    }
+    
+    .project-description {
+        font-size: 0.8rem;
+    }
+}
+
+/* Responsive para proyectos */
 @media (max-width: 1024px) {
     .projects-gallery {
         grid-template-columns: repeat(2, 1fr);
@@ -1424,6 +1455,12 @@ span::after {
     .project-description {
         font-size: 0.75rem;
     }
+
+    .menu-nav{
+        margin-top: 0;
+    }
+    .menu-nav a{
+    font-size: 2rem;
 }
 
 
@@ -1800,25 +1837,7 @@ html {
     }
 }
 
-/* Animación de carga para la página completa */
-.page-loading {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: var(--secondary-color);
-    z-index: 10000;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: opacity 0.5s ease;
-}
 
-.page-loading.fade-out {
-    opacity: 0;
-    pointer-events: none;
-}
 
 /* Efecto de hover para tech tags */
 .tech-tag {
